<resources>
    <!-- App name -->
    <string name="app_name">EasePic</string>

    <!-- Menu -->
    <string name="menu_details">Details</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_date">By date</string>
    <string name="menu_sort_by_name">By name</string>

    <!-- Permissions -->
    <string name="permission_read_external_storage_rationale">Read external storage permission is needed to show gallery albums.</string>
    <string name="permission_read_external_storage_granted">Read external storage permission has been granted</string>
    <string name="permission_read_external_storage_not_granted">Read external storage permission were not granted.</string>

    <!-- Errors -->
    <string name="error_no_pictures">No pictures found</string>
    <string name="error_get_albums">Failed to get albums</string>
    <string name="error_get_pictures">Failed to get pictures</string>
    <string name="error_album_rename_failed">Failed to rename album</string>

    <!-- Preferences -->
    <string name="key_sort_order_albums">by.vshkl.easepic.SORT_ORDER.ALBUMS</string>
    <string name="value_sort_order_by_date_albums">by.vshkl.easepic.SORT_ORDER_BY_DATE.ALBUMS</string>
    <string name="value_sort_order_by_name_albums">by.vshkl.easepic.SORT_ORDER_BY_NAME.ALBUMS</string>
    <string name="key_sort_order_album">by.vshkl.easepic.SORT_ORDER.ALBUM</string>
    <string name="value_sort_order_by_date_album">by.vshkl.easepic.SORT_ORDER_BY_DATE.ALBUM</string>
    <string name="value_sort_order_by_name_album">by.vshkl.easepic.SORT_ORDER_BY_NAME.ALBUM</string>

    <!-- Dialog -->
    <string name="dialog_picture_delete_message">Delete picture?</string>
    <string name="dialog_picture_details_title">Details</string>
    <string name="dialog_picture_details_category_path">Path</string>
    <string name="dialog_picture_details_category_mimetype">MIME type</string>
    <string name="dialog_picture_details_category_size">Size</string>
    <string name="dialog_picture_details_category_resolution">Resolution</string>
    <string name="dialog_picture_details_category_date">Date</string>
    <string name="dialog_album_edit_title">Rename album</string>
    <string name="dialog_album_edit_hint">Album name</string>
    <string name="dialog_album_edit_error">Album name can\'t be empty</string>

    <!-- Chooser -->
    <string name="chooser_share_title">Share image with…</string>

    <!-- Buttons -->
    <string name="button_delete">Delete</string>

</resources>