<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AlbumActivity"
    >

    <item
        android:id="@+id/action_share"
        android:orderInCategory="1"
        android:title="@string/menu_share"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_details"
        android:orderInCategory="2"
        android:title="@string/menu_details"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="3"
        android:title="@string/menu_delete"
        app:showAsAction="never"
        />

</menu>